--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,10 +8,19 @@
 }
 
 @media screen and (max-width:375px) and (min-width:280px) {
+  .link-logo-new{
+    display: block;
+    width: 45%;
+  }
+
+  .vector-img-logo{
+    width: 45px;
+    height: auto;
+  }
 
   .clickorstop{
     margin-top: 20%;
-    width: 75%;
+    width: 100%;
   }
 
   .tooltip-slider-hover{
@@ -1452,8 +1461,19 @@
 
 @media screen and (max-width:414px) and (min-width:375px) {
 
+  .link-logo-new{
+    display: block;
+    width: 45%;
+  }
+
+  .vector-img-logo{
+    width: 45px;
+    height: auto;
+  }
+
   .clickorstop{
     margin-top: 14%;
+    width: 100%;
   }
 
   li.width-driver {
@@ -2689,9 +2709,24 @@
 }
 
 @media screen and (max-width:540px) and (min-width:414px) {
-  
+
+  .link-logo-new{
+    display: block;
+    width: 45%;
+  }
+
+  .vector-img-logo{
+    width: 65px;
+    height: auto;
+  }
+
+  .background-img-logo {
+    width: 39%;
+  }
+
   .clickorstop{
     margin-top: 14%;
+    width: 100%;
   }
 
   .cover-new {
@@ -4184,6 +4219,20 @@
 
 @media screen and (max-width:820px) and (min-width:540px) {
 
+  .link-logo-new{
+    display: block;
+    width: 45%;
+  }
+
+  .vector-img-logo{
+    width: 65px;
+    height: auto;
+  }
+
+  .background-img-logo {
+    width: 35%;
+  }
+
   div#displayourCLIENTS,
   .cell-responciv,
   .cell-responciv-bike .section-CarRental-rental1,
@@ -4240,6 +4289,7 @@
 
   .clickorstop{
     margin-top: 12%;
+    width: 100%;
   }
 
   .Words-slider-top {
@@ -5756,6 +5806,16 @@
 
 @media screen and (max-width:912px) and (min-width:820px) {
 
+  .link-logo-new{
+    width: 30%;
+    justify-content: center;
+  }
+
+  .vector-img-logo{
+    width: 65px;
+    height: auto;
+  }
+
   div#displayourCLIENTS,
   .cell-responciv,
   .cell-responciv-bike .section-CarRental-rental1,
@@ -5818,6 +5878,7 @@
 
   .clickorstop{
     margin-top: 10%;
+    width: 100%;
   }
 
   .d1-none {
@@ -7133,6 +7194,7 @@
 
   .clickorstop{
     margin-top: 9%;
+    width: 100%;
   }
 
   .cover-new {
@@ -8429,6 +8491,7 @@
 
   .clickorstop{
     margin-top: 8%;
+    width: 100%;
   }
 
   .overlay {
@@ -11087,6 +11150,23 @@
     width: 11%;
     margin-top: -59%;
   }
+  
+  .image-client-profile{
+    margin-bottom: 28%;
+  }
+
+  .img-profile{
+    width: 35%;
+    font-size: 15px;
+    padding: 5%;
+  }
+
+  .show {
+    display: block !important;
+    left: 0!important;
+    right: 0 !important;
+    width: 100% !important;
+  }
 
   /* page about-us */
 
@@ -11492,6 +11572,22 @@
     width: 11%;
     margin-top: -59%;
   }
+  
+  .image-client-profile{
+    margin-bottom: 20%;
+  }
+
+  .img-profile{
+    width: 50%;
+    font-size: 30px;
+  }
+
+  .show {
+    display: block !important;
+    left: 0!important;
+    right: 0 !important;
+    width: 100% !important;
+  }
 
   /* page about-us */
 
@@ -11849,6 +11945,22 @@
     margin-top: -59%;
   }
 
+  .image-client-profile{
+    margin-bottom: 17%;
+  }
+
+  .img-profile{
+    width: 40%;
+    font-size: 50px;
+  }
+
+  .show {
+    display: block !important;
+    left: 0!important;
+    right: 0 !important;
+    width: 100% !important;
+  }
+
   /* page about-us */
 
   .contener-about,
@@ -12145,8 +12257,16 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 40%;
+  .image-client-profile{
+    margin-bottom: 13%;
+  }
+
+  .img-profile{
+    width: 30%;
+  }
+
+  .show {
+    display: block !important;
   }
 
   .Prevcients,
@@ -12397,8 +12517,16 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 40%;
+  .image-client-profile{
+    margin-bottom: 13%;
+  }
+
+  .img-profile{
+    width: 30%;
+  }
+
+  .show {
+    display: block !important;
   }
 
   .Prevcients,
@@ -12575,10 +12703,9 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 35%;
-  }
-
+  .image-client-profile {
+    margin-bottom: 10%;
+}
   .Prevcients,
   .Nextcients {
     width: 10%;
@@ -12757,10 +12884,6 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 25%;
-  }
-
   .Prevcients,
   .Nextcients {
     width: 8%;
@@ -12925,10 +13048,6 @@
     font-size: 12px;
     color: #fffffa;
     line-height: 20px;
-  }
-
-  .img-profile {
-    width: 25%;
   }
 
   .Prevcients,
@@ -13228,7 +13347,7 @@
   }
 
   .img-profile {
-    width: 25%;
+    font-size: 70px;
   }
 
   .Prevcients,
@@ -13395,10 +13514,6 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 25%;
-  }
-
   .Prevcients,
   .Nextcients {
     width: 8%;
@@ -13479,10 +13594,6 @@
     line-height: 20px;
   }
 
-  .img-profile {
-    width: 25%;
-  }
-
   .Prevcients,
   .Nextcients {
     width: 8%;
@@ -13492,18 +13603,6 @@
 }
 
 @media screen and (max-width: 1660px) and (min-width: 1560px) {
-  .link-logo-new {
-    width: 25%;
-  }
-
-  .background-img-logo{
-    width: 60%;
-  }
-  
-  .vector-img-logo {
-    width: 25%;
-    height: 105px;
-  }
 
   /* folder-profile-driver css */
 
@@ -13689,10 +13788,6 @@
     font-size: 12px;
     color: #fffffa;
     line-height: 20px;
-  }
-
-  .img-profile {
-    width: 25%;
   }
 
   .Prevcients,
@@ -13889,10 +13984,6 @@
     font-size: 12px;
     color: #fffffa;
     line-height: 20px;
-  }
-
-  .img-profile {
-    width: 15%;
   }
 
   .Prevcients,
@@ -14172,19 +14263,8 @@
     position: relative;
   }
 
-  .image-client-profile,
-  .buttons-move-RightAndLeft {
-    width: 100%;
-    position: relative;
-  }
-
-
-  .img-profile {
-    width: 22%;
-    height: 200px;
-    z-index: -2;
-    border-radius: 100%;
-    position: relative;
+  .image-client-profile {
+    margin-bottom: 10%;
   }
 
   .Prevcients {
@@ -14952,20 +15032,6 @@
     font-size: 35px;
   }
 
-  .link-logo-new {
-    width: 45%;
-  }
-
-  img.vector-img-logo {
-    width: 70%;
-  }
-
-  .background-img-logo {
-    width: 55%;
-    display: inherit;
-    margin-left: 7%;
-    margin-top: 3%;
-  }
 
   h1.h1-slider-top,
   .p-slider-top {
