--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11161,7 +11161,7 @@
     padding: 5%;
   }
 
-  .show {
+  .shows {
     display: block !important;
     left: 0!important;
     right: 0 !important;
@@ -11582,7 +11582,7 @@
     font-size: 30px;
   }
 
-  .show {
+  .shows {
     display: block !important;
     left: 0!important;
     right: 0 !important;
@@ -11954,7 +11954,7 @@
     font-size: 50px;
   }
 
-  .show {
+  .shows {
     display: block !important;
     left: 0!important;
     right: 0 !important;
@@ -12265,7 +12265,7 @@
     width: 30%;
   }
 
-  .show {
+  .shows {
     display: block !important;
   }
 
@@ -12525,7 +12525,7 @@
     width: 30%;
   }
 
-  .show {
+  .shows {
     display: block !important;
   }
 
