--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ ul.show {
 
 #container-fluid {
   position: relative;
-  background-color: rgb(0 0 0 / 28%);
+  background-color: #6c18f97d;
   border-top: 2px solid #b680e7;
   padding: 0;
   z-index: 99999999999;
@@ -548,6 +548,11 @@ li.width-driver {
 
 .width-Click button:hover{
   background-color: #2197e2;
+}
+
+.dark-mode {
+  background-color: rgba(0, 0, 0, 0.397);
+  color: #6b68ef !important;
 }
 
 .cover-new {
