--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,6 +17,10 @@
     width: 45%;
   }
 
+  .nav-link {
+    font-size: 16px !important;
+  }
+
   form#d-flex {
     width: 55% !important;
     padding: 0 !important;
@@ -1492,6 +1496,10 @@
 }
 
 @media screen and (max-width:414px) and (min-width:375px) {
+  .nav-link {
+    font-size: 16px !important;
+  }
+
   form#d-flex {
     width: 60% !important;
     padding: 0 !important;
@@ -2764,6 +2772,10 @@
 @media screen and (max-width:540px) and (min-width:414px) {
   .width {
     width: 50%;
+  }
+
+  .nav-link {
+    font-size: 16px !important;
   }
 
   form#d-flex {
@@ -4298,6 +4310,10 @@
 @media screen and (max-width:820px) and (min-width:540px) {
   .width {
     width: 50%;
+  }
+
+  .nav-link {
+    font-size: 16px !important;
   }
 
   form#d-flex {
